--- a/style.css
+++ b/style.css
@@ -1,3 +1,32 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@Abraham599 
+Abraham599
+/
+GDSC-project
+Private
+Code
+Issues
+Pull requests
+Actions
+Projects
+Security
+Insights
+Settings
+GDSC-project/style.css
+@Abraham599
+Abraham599 Add files via upload
+Latest commit 23b5a24 6 days ago
+ History
+ 1 contributor
+76 lines (65 sloc)  1.48 KB
+
 /* Three columns side by side */
 .row{
   display: grid;
@@ -74,3 +103,18 @@ font-family: 'League Spartan', sans-serif;
 font-family: 'Pacifico', cursive;
 font-family: 'Spline Sans', sans-serif;
   }
+Footer
+© 2022 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+GDSC-project/style.css at main · Abraham599/GDSC-project
