--- a/home.css
+++ b/home.css
@@ -1,11 +1,14 @@
 * {
-    box-sizing: border-box;
     padding: 0;
     margin: 0;
+    white-space: normal;
 }
 body
 {
+    display: flex;
+    flex-direction: column;
     background-color: grey;
+    position: relative;
 }
 .container
 {
@@ -13,9 +16,10 @@ body
     justify-content: center;
     flex-wrap: wrap;
     height: 200px;
-    background-image: url("Avengers_(comics)-White-Logo.wine.png");
+    /* background-image: url("Avengers_(comics)-White-Logo.wine.png"); */
     background-repeat: no-repeat;
     background-size: 500px 500px;
+    position: relative;
 }
 .trending
 {
@@ -23,9 +27,9 @@ body
     width: 1500px;
     height: 700px ;
     margin: 30px;
-    margin-top: 100px;
+    margin-top: 50px;
     border-radius: 15px; 
-    background-image: url("Avengers_(comics)-White-Logo.wine.png");
+    /* background-image: url("Avengers_(comics)-White-Logo.wine.png"); */
     background-repeat: no-repeat;
     background-size: 100%;
 }
@@ -124,34 +128,51 @@ body
    
     background-size:cover;
     background-position: center;
+    position: relative;  
+    background-size:contain;
+    background-position: center;
     background-color: rgb(201, 33, 33);
     font-family: sans-serif;
+    min-height: 100%;
 }
-.Menu-Bar
-{
-    background-color: rgb(38, 16, 109);
+.Menu-Bar {
+    display: flex;
+      justify-content: center;
+      background-color: #2C3B4F;
+    
+      text-align: center;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .Menu-Bar a {
+    float: left;
+    justify-items: center;
+    padding: 15px;
+    color: #f2f2f2;
     text-align: center;
-}
-.Menu-Bar ul
-{
-    display: inline-flex;
-    list-style: none;
-    color:aliceblue;
-}
-.Menu-Bar ul li
-{
-width: 120px;
-margin: 15px;
-padding: 15px;
-}
-.Menu-Bar ul li a
-{
-text-decoration: none;
-color:white;
-}
-.active,.Menu-Bar ul li :hover
-{
-background-color:rgb(53, 53, 125);
-border-radius: 3px;
-
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .Menu-Bar a:hover {
+    background-color: #C7CED9;
+    color: #222A38;
+  }
+  
+  /* Add a color to the active/current link */
+  .Menu-Bar a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    margin-top: 600px;
+    width:100%;
+    height: 200px;
+    
+    
 }
