--- a/home.css
+++ b/home.css
@@ -9,6 +9,7 @@ body
     flex-direction: column;
     background-color: grey;
     position: relative;
+    overflow-x: hidden;
 }
 .container
 {
@@ -170,9 +171,9 @@ body
     display: flex;
     flex-direction: column;
     position: absolute;
-    margin-top: 600px;
+    margin-top: 550px;
     width:100%;
-    height: 200px;
+    height: 150px;
     
     
 }
